SDK regeneration 18-Aug-2025 (#25)
