# pingone/api/openapi.yaml
@@ -10,7 +10,7 @@ info:
   license:
     name: Apache 2.0
   title: PingOne Platform User and Configuration Management API - SDK Generator
-  version: 2025.08.13-development
+  version: 2025.08.18-development
 servers:
 - url: "https://api.pingone.{tld}/{basePath}"
   variables:
@@ -29,6 +29,8 @@ security:
 - bearerAuth: []
 - oauth2: []
 tags:
+- description: Operations for managing PingOne configuration management actions
+  name: Configuration Management
 - description: Operations for managing DaVinci applications and application flows
     policies
   name: DaVinci Applications
@@ -220,9 +222,9 @@ paths:
         "401":
           $ref: '#/components/responses/http.401.Unauthorized'
         "403":
-          $ref: '#/components/responses/http.403.Forbidden.P14C63085'
+          $ref: '#/components/responses/http.403.Forbidden'
         "404":
-          $ref: '#/components/responses/http.404.NotFound.DOCS8830'
+          $ref: '#/components/responses/http.404.NotFound'
         "429":
           $ref: '#/components/responses/http.429.TooManyRequests'
         "500":
@@ -1186,6 +1188,182 @@ paths:
       - DaVinci Applications
       x-permission: davinci:update:applications
       x-pingidentity-operation-action: rotate
+  /environments/{environmentID}/snapshots:
+    post:
+      operationId: createSnapshot
+      parameters:
+      - $ref: '#/components/parameters/com.pingidentity.path.environments.environmentID'
+      - explode: true
+        in: query
+        name: expand
+        required: false
+        schema:
+          type: string
+        style: form
+      - $ref: '#/components/parameters/com.pingidentity.header.ExternalSessionID'
+      - $ref: '#/components/parameters/com.pingidentity.header.ExternalTransactionID'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SnapshotRequest'
+        required: true
+      responses:
+        "201":
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/SnapshotView'
+          description: Created
+        "400":
+          $ref: '#/components/responses/http.400.BadRequest'
+        "401":
+          $ref: '#/components/responses/http.401.Unauthorized'
+        "403":
+          $ref: '#/components/responses/http.403.Forbidden.P14C63085.DOCS8830'
+        "429":
+          $ref: '#/components/responses/http.429.TooManyRequests'
+        "500":
+          $ref: '#/components/responses/http.500.InternalServerError'
+        "502":
+          $ref: '#/components/responses/http.502.BadGateway'
+        "503":
+          $ref: '#/components/responses/http.503.ServiceUnavailable'
+      tags:
+      - Configuration Management
+      x-feature-flag: p1ax-1984-configuration-promotion
+      x-permission: promotion:create:snapshot
+  /environments/{environmentID}/snapshots/{snapshotID}:
+    get:
+      operationId: getSnapshotById
+      parameters:
+      - $ref: '#/components/parameters/com.pingidentity.path.environments.environmentID'
+      - $ref: '#/components/parameters/com.pingidentity.path.environments.snapshots.snapshotID'
+      - explode: true
+        in: query
+        name: expand
+        required: false
+        schema:
+          type: string
+        style: form
+      - explode: true
+        in: query
+        name: filter
+        required: false
+        schema:
+          type: string
+        style: form
+      - $ref: '#/components/parameters/com.pingidentity.header.ExternalSessionID'
+      - $ref: '#/components/parameters/com.pingidentity.header.ExternalTransactionID'
+      responses:
+        "200":
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/SnapshotView'
+          description: OK
+        "400":
+          $ref: '#/components/responses/http.400.BadRequest'
+        "401":
+          $ref: '#/components/responses/http.401.Unauthorized'
+        "403":
+          $ref: '#/components/responses/http.403.Forbidden.P14C63085'
+        "429":
+          $ref: '#/components/responses/http.429.TooManyRequests'
+        "500":
+          $ref: '#/components/responses/http.500.InternalServerError'
+        "502":
+          $ref: '#/components/responses/http.502.BadGateway'
+        "503":
+          $ref: '#/components/responses/http.503.ServiceUnavailable'
+      tags:
+      - Configuration Management
+      x-feature-flag: p1ax-1984-configuration-promotion
+      x-permission: promotion:read:snapshot
+  /environments/{environmentID}/snapshots/{snapshotID}/versions:
+    get:
+      operationId: getVersionsBySnapshotId
+      parameters:
+      - $ref: '#/components/parameters/com.pingidentity.path.environments.environmentID'
+      - $ref: '#/components/parameters/com.pingidentity.path.environments.snapshots.snapshotID'
+      - $ref: '#/components/parameters/com.pingidentity.header.ExternalSessionID'
+      - $ref: '#/components/parameters/com.pingidentity.header.ExternalTransactionID'
+      responses:
+        "200":
+          content:
+            application/hal+json:
+              schema:
+                $ref: '#/components/schemas/SnapshotVersionCollectionResponse'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SnapshotVersionCollectionResponse'
+          description: OK
+        "400":
+          $ref: '#/components/responses/http.400.BadRequest'
+        "401":
+          $ref: '#/components/responses/http.401.Unauthorized'
+        "403":
+          $ref: '#/components/responses/http.403.Forbidden.P14C63085'
+        "429":
+          $ref: '#/components/responses/http.429.TooManyRequests'
+        "500":
+          $ref: '#/components/responses/http.500.InternalServerError'
+        "502":
+          $ref: '#/components/responses/http.502.BadGateway'
+        "503":
+          $ref: '#/components/responses/http.503.ServiceUnavailable'
+      tags:
+      - Configuration Management
+      x-feature-flag: p1ax-1984-configuration-promotion
+      x-permission: promotion:read:snapshot
+  /environments/{environmentID}/snapshots/{snapshotID}/versions/{versionID}:
+    get:
+      operationId: getVersionByIdUsingSnapshotId
+      parameters:
+      - $ref: '#/components/parameters/com.pingidentity.path.environments.environmentID'
+      - $ref: '#/components/parameters/com.pingidentity.path.environments.snapshots.snapshotID'
+      - $ref: '#/components/parameters/com.pingidentity.path.environments.snapshots.versions.versionID'
+      - explode: true
+        in: query
+        name: expand
+        required: false
+        schema:
+          type: string
+        style: form
+      - explode: true
+        in: query
+        name: filter
+        required: false
+        schema:
+          type: string
+        style: form
+      - $ref: '#/components/parameters/com.pingidentity.header.ExternalSessionID'
+      - $ref: '#/components/parameters/com.pingidentity.header.ExternalTransactionID'
+      responses:
+        "200":
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/SnapshotView'
+          description: OK
+        "400":
+          $ref: '#/components/responses/http.400.BadRequest'
+        "401":
+          $ref: '#/components/responses/http.401.Unauthorized'
+        "403":
+          $ref: '#/components/responses/http.403.Forbidden.P14C63085'
+        "429":
+          $ref: '#/components/responses/http.429.TooManyRequests'
+        "500":
+          $ref: '#/components/responses/http.500.InternalServerError'
+        "502":
+          $ref: '#/components/responses/http.502.BadGateway'
+        "503":
+          $ref: '#/components/responses/http.503.ServiceUnavailable'
+      tags:
+      - Configuration Management
+      x-feature-flag: p1ax-1984-configuration-promotion
+      x-permission: promotion:read:snapshot
   /environments/{environmentID}/totalIdentities:
     get:
       operationId: getTotalIdentities
@@ -1517,6 +1695,24 @@ components:
       required: true
       schema:
         pattern: "^(?=\\S)[\\p{L}\\p{M}\\p{N}\\p{So}/.'_ -]*(?!.*((<)|(\\$\\{)))"
+        type: string
+      style: simple
+    com.pingidentity.path.environments.snapshots.snapshotID:
+      explode: false
+      in: path
+      name: snapshotID
+      required: true
+      schema:
+        format: uuid
+        type: string
+      style: simple
+    com.pingidentity.path.environments.snapshots.versions.versionID:
+      explode: false
+      in: path
+      name: versionID
+      required: true
+      schema:
+        format: uuid
         type: string
       style: simple
   responses:
@@ -5080,11 +5276,6 @@ components:
         id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
         message: message
       properties:
-        id:
-          format: uuid
-          minLength: 1
-          title: Forbidden Error Id
-          type: string
         code:
           $ref: '#/components/schemas/Forbidden_Error_Code'
         message:
@@ -5095,9 +5286,12 @@ components:
           items:
             $ref: '#/components/schemas/Forbidden_Error_Detail'
           type: array
+        id:
+          format: uuid
+          title: Forbidden Error Id
+          type: string
       required:
       - code
-      - id
       - message
       title: Forbidden Error
       x-go-generate-error: true
@@ -5311,6 +5505,156 @@ components:
       required:
       - id
       title: Resource Relationship Read-Only
+    SnapshotRequest:
+      example:
+        baseResourceURL: baseResourceURL
+      properties:
+        baseResourceURL:
+          minLength: 1
+          title: Snapshot Request Base Resource URL
+          type: string
+      required:
+      - baseResourceURL
+      title: Snapshot Request
+    SnapshotResourceInformation:
+      example:
+        name: name
+        id: id
+        category: category
+      properties:
+        category:
+          title: Snapshot Resource Information Category
+          type: string
+        id:
+          title: Snapshot Resource Information Id
+          type: string
+        name:
+          title: Snapshot Resource Information Name
+          type: string
+      title: Snapshot Resource Information
+    SnapshotVersionCollectionResponse:
+      example:
+        size: 6
+        _embedded:
+          versions:
+          - ""
+          - ""
+        _links:
+          self:
+            profile: https://openapi-generator.tech
+            name: name
+            href: https://openapi-generator.tech
+            title: https://openapi-generator.tech
+            type: type
+        count: 0
+      properties:
+        _embedded:
+          $ref: '#/components/schemas/Snapshot_Version_Collection_Response__embedded'
+        _links:
+          $ref: '#/components/schemas/Snapshot_Version_Collection_Response__links'
+        count:
+          format: int32
+          title: Snapshot Version Collection Response Count
+          type: integer
+        size:
+          format: int32
+          title: Snapshot Version Collection Response Size
+          type: integer
+      title: Snapshot Version Collection Response
+    SnapshotView:
+      example:
+        completedAt: 2000-01-23T04:56:07.000+00:00
+        snapshotId: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
+        _links:
+          self:
+            profile: https://openapi-generator.tech
+            name: name
+            href: https://openapi-generator.tech
+            title: https://openapi-generator.tech
+            type: type
+        configuration: configuration
+        resource:
+          name: name
+          id: id
+          category: category
+        startedAt: 2000-01-23T04:56:07.000+00:00
+        referencedResources:
+        - referencedResources
+        - referencedResources
+        error: error
+        versionedAt: 2000-01-23T04:56:07.000+00:00
+        createdAt: 2000-01-23T04:56:07.000+00:00
+        environment:
+          id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
+        resourceUrl: resourceUrl
+        _embedded:
+          key: "{}"
+        importMetadata:
+          key: "{}"
+        id: 046b6c7f-0b8a-43b9-b35d-6489e6daee91
+        status: COMPLETE
+      properties:
+        _embedded:
+          additionalProperties:
+            readOnly: true
+            title: Snapshot View _embedded Additional Properties
+            type: object
+          readOnly: true
+          title: Snapshot View _embedded
+        _links:
+          $ref: '#/components/schemas/Snapshot_View__links'
+        completedAt:
+          format: date-time
+          title: Snapshot View Completed At
+          type: string
+        configuration:
+          title: Snapshot View Configuration
+          type: string
+        createdAt:
+          format: date-time
+          title: Snapshot View Created At
+          type: string
+        environment:
+          $ref: '#/components/schemas/ResourceRelationshipReadOnly'
+        error:
+          title: Snapshot View Error
+          type: string
+        id:
+          format: uuid
+          readOnly: true
+          title: Snapshot View Id
+          type: string
+        importMetadata:
+          additionalProperties:
+            title: Snapshot View Import Metadata Additional Properties
+            type: object
+          title: Snapshot View Import Metadata
+        referencedResources:
+          items:
+            title: Snapshot View Referenced Resource
+            type: string
+          type: array
+          uniqueItems: true
+        resource:
+          $ref: '#/components/schemas/SnapshotResourceInformation'
+        resourceUrl:
+          title: Snapshot View Resource Url
+          type: string
+        snapshotId:
+          format: uuid
+          title: Snapshot View Snapshot Id
+          type: string
+        startedAt:
+          format: date-time
+          title: Snapshot View Started At
+          type: string
+        status:
+          $ref: '#/components/schemas/Snapshot_View_Status'
+        versionedAt:
+          format: date-time
+          title: Snapshot View Versioned At
+          type: string
+      title: Snapshot View
     TooManyRequestsError:
       example:
         code: REQUEST_LIMITED
@@ -7627,6 +7971,56 @@ components:
       - code
       - message
       title: Not Found Error Detail
+    Snapshot_Version_Collection_Response__embedded:
+      example:
+        versions:
+        - ""
+        - ""
+      properties:
+        versions:
+          items:
+            allOf:
+            - $ref: '#/components/schemas/SnapshotView'
+            title: Snapshot Version Collection Response _embedded Version
+          type: array
+      title: Snapshot Version Collection Response _embedded
+    Snapshot_Version_Collection_Response__links:
+      additionalProperties:
+        $ref: '#/components/schemas/JSONHALLink'
+      example:
+        self:
+          profile: https://openapi-generator.tech
+          name: name
+          href: https://openapi-generator.tech
+          title: https://openapi-generator.tech
+          type: type
+      properties:
+        self:
+          $ref: '#/components/schemas/JSONHALLink'
+      title: Snapshot Version Collection Response _links
+    Snapshot_View__links:
+      additionalProperties:
+        $ref: '#/components/schemas/JSONHALLink'
+      example:
+        self:
+          profile: https://openapi-generator.tech
+          name: name
+          href: https://openapi-generator.tech
+          title: https://openapi-generator.tech
+          type: type
+      properties:
+        self:
+          $ref: '#/components/schemas/JSONHALLink'
+      readOnly: true
+      title: Snapshot View _links
+    Snapshot_View_Status:
+      enum:
+      - COMPLETE
+      - ERROR
+      - IN_PROGRESS
+      - WAITING
+      title: Snapshot View Status
+      type: string
     Too_Many_Requests_Error_Code:
       enum:
       - REQUEST_LIMITED
@@ -7796,3 +8190,5 @@ x-permissions:
 - name: orgmgt:delete:environment
 - name: orgmgt:read:environment
 - name: orgmgt:update:environment
+- name: promotion:create:snapshot
+- name: promotion:read:snapshot
