# pingone/model_snapshot_view__links.go
@@ -1,0 +1,169 @@
+// Copyright © 2025 Ping Identity Corporation
+/*
+PingOne Platform User and Configuration Management API - SDK Generator
+
+PingOne is a cloud-based framework for secure identity access management. The PingOne API gives developers the tools to integrate enterprise and third-party applications with the PingOne platform.
+
+Contact: devex@pingidentity.com
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package pingone
+
+import (
+	"encoding/json"
+	"log/slog"
+)
+
+// checks if the SnapshotViewLinks type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &SnapshotViewLinks{}
+
+// checks if the SnapshotViewLinks type satisfies the LogValuer interface at compile time
+var _ slog.LogValuer = &SnapshotViewLinks{}
+
+// SnapshotViewLinks struct for SnapshotViewLinks
+type SnapshotViewLinks struct {
+	Self                 *JSONHALLink `json:"self,omitempty"`
+	AdditionalProperties map[string]interface{}
+}
+
+type _SnapshotViewLinks SnapshotViewLinks
+
+// NewSnapshotViewLinks instantiates a new SnapshotViewLinks object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewSnapshotViewLinks() *SnapshotViewLinks {
+	this := SnapshotViewLinks{}
+	return &this
+}
+
+// NewSnapshotViewLinksWithDefaults instantiates a new SnapshotViewLinks object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewSnapshotViewLinksWithDefaults() *SnapshotViewLinks {
+	this := SnapshotViewLinks{}
+	return &this
+}
+
+// GetSelf returns the Self field value if set, zero value otherwise.
+func (o *SnapshotViewLinks) GetSelf() JSONHALLink {
+	if o == nil || IsNil(o.Self) {
+		var ret JSONHALLink
+		return ret
+	}
+	return *o.Self
+}
+
+// GetSelfOk returns a tuple with the Self field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *SnapshotViewLinks) GetSelfOk() (*JSONHALLink, bool) {
+	if o == nil || IsNil(o.Self) {
+		return nil, false
+	}
+	return o.Self, true
+}
+
+// HasSelf returns a boolean if a field has been set.
+func (o *SnapshotViewLinks) HasSelf() bool {
+	if o != nil && !IsNil(o.Self) {
+		return true
+	}
+
+	return false
+}
+
+// SetSelf gets a reference to the given JSONHALLink and assigns it to the Self field.
+func (o *SnapshotViewLinks) SetSelf(v JSONHALLink) {
+	o.Self = &v
+}
+
+func (o SnapshotViewLinks) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o SnapshotViewLinks) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Self) {
+		toSerialize["self"] = o.Self
+	}
+
+	for key, value := range o.AdditionalProperties {
+		toSerialize[key] = value
+	}
+
+	return toSerialize, nil
+}
+
+func (o *SnapshotViewLinks) UnmarshalJSON(data []byte) (err error) {
+	varSnapshotViewLinks := _SnapshotViewLinks{}
+
+	err = json.Unmarshal(data, &varSnapshotViewLinks)
+
+	if err != nil {
+		return err
+	}
+
+	*o = SnapshotViewLinks(varSnapshotViewLinks)
+
+	additionalProperties := make(map[string]interface{})
+
+	if err = json.Unmarshal(data, &additionalProperties); err == nil {
+		delete(additionalProperties, "self")
+		o.AdditionalProperties = additionalProperties
+	}
+
+	return err
+}
+
+func (o SnapshotViewLinks) LogValue() slog.Value {
+	logAttrs := make([]slog.Attr, 0)
+
+	if !IsNil(o.Self) {
+		logAttrs = append(logAttrs, slog.Any("self", *o.Self))
+	}
+	logAttrs = append(logAttrs, slog.Any("additionalProperties", o.AdditionalProperties))
+
+	return slog.GroupValue(logAttrs...)
+}
+
+type NullableSnapshotViewLinks struct {
+	value *SnapshotViewLinks
+	isSet bool
+}
+
+func (v NullableSnapshotViewLinks) Get() *SnapshotViewLinks {
+	return v.value
+}
+
+func (v *NullableSnapshotViewLinks) Set(val *SnapshotViewLinks) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableSnapshotViewLinks) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableSnapshotViewLinks) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableSnapshotViewLinks(val *SnapshotViewLinks) *NullableSnapshotViewLinks {
+	return &NullableSnapshotViewLinks{value: val, isSet: true}
+}
+
+func (v NullableSnapshotViewLinks) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableSnapshotViewLinks) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
